--- a/src/styles/profile-styles.scss
+++ b/src/styles/profile-styles.scss
@@ -1,36 +1,5 @@
-.row {
-    display: flex;
-}
-
-.left-half {
-    padding-left: 10px;
-    background-color: gray;
-}
-
-.image-container {
-    position: relative;
-    // top: 30%;
-    // left: 20%;
-}
-
-.upload-photo-button {
-    // position: relative;
-    // top: 38%;
-    // left: 28%;
-}
-
-.personl-info-header-section {
-    border: 1px dotted black;
-    display: flex;
-    align-items: center;
-}
-
-.personal-info-header {
-    margin: 0;
-}
-
-.edit-button {
-    margin-left: auto;
+TextField {
+    width: 500px;
 }
 
 .img-thumbnail {
