--- a/src/styles/signup-styles.scss
+++ b/src/styles/signup-styles.scss
@@ -14,6 +14,6 @@
 
 .signup-submit-button {
   margin-top: 2rem;
-  background-color: #ade8f4;
-  color: #023e8a;
+  background-color: #ade8f4 !important;
+  color: #023e8a !important;
 }
