--- a/src/styles/chat-styles.scss
+++ b/src/styles/chat-styles.scss
@@ -1,6 +1,6 @@
 .home {
   background-color: #023e8a;
-  height: 100vh;
+  // height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,6 +109,7 @@
   }
 }
 
+/*
 .chatInput {
   height: 20px;
   background-color: white;
@@ -136,3 +137,4 @@
     }
   }
 }
+*/
