--- a/src/styles/profile-styles.scss
+++ b/src/styles/profile-styles.scss
@@ -8,17 +8,8 @@
   margin-bottom: 1rem;
 }
 
-.profile-container {
-  background: #023e8a;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  top: 0;
-}
-
 .personal-details-container {
-  background: #fcf6f6;
+  background: white;
   width: 60rem;
   padding-bottom: 1.5rem;
 }
