--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -6,3 +6,73 @@ nav a {
     color: inherit;
     text-decoration: none;
 }
+
+button {
+    background-color: #ffb511;
+    color: black;
+    border-radius: 6px;
+}
+
+a:hover{
+    text-decoration: none
+}
+
+.centered {
+    width:100%;
+    margin:0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.outer_navbar{
+    width:100%;
+    margin:0px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    display: inline-block;
+    width: 100%;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 3;
+}
+
+/* Buttons inside the dropdown */
+.dropdown-content button {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    background-color: #ffb511;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(1,1,1,0.2);
+    z-index: 3;
+    border-radius: 0px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content button:hover {
+    background-color: #aaa;
+    box-shadow: 0px 8px 16px 0px rgba(1,1,1,0.2);
+    z-index: 3;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.nav-bar{
+   backgroundColor: "rgb(23,40,74)"
+}
