--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,5 @@
 nav span {
-    font-size: 2em;
+    font-size: 3em;
 }
 
 nav a {
@@ -17,28 +17,36 @@ a:hover{
     text-decoration: none
 }
 
-.centered {
-    width:100%;
-    margin:0px;
+.d{
+    position: relative;
+}
+
+.dc{
+    display: none;
+    position: absolute;
+    right: 0;
+    background: rgb(2, 62, 138);
+    border: 1px solid white;
+}
+
+.dc span{
+    display: block;
+    text-align: center;
+    padding: 0 0vw;
+}
+
+.d:hover .dc {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.outer_navbar{
-    width:100%;
-    margin:0px;
-    justify-content: center;
-    align-items: center;
-
+    flex-direction: column;
 }
 
-/* The container <div> - needed to position the dropdown content */
+
+/*
 .dropdown {
     display: inline-block;
     width: 100%;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -48,7 +56,6 @@ a:hover{
     z-index: 3;
 }
 
-/* Buttons inside the dropdown */
 .dropdown-content button {
     color: black;
     padding: 12px 16px;
@@ -62,17 +69,12 @@ a:hover{
     border-radius: 0px;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content button:hover {
     background-color: #aaa;
     box-shadow: 0px 8px 16px 0px rgba(1,1,1,0.2);
     z-index: 3;
 }
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 .nav-bar{
    backgroundColor: "rgb(23,40,74)"
 }
+*/
