--- a/src/styles/profile-styles.scss
+++ b/src/styles/profile-styles.scss
@@ -21,3 +21,12 @@
 .save-info-button {
   margin-top: 1rem !important;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
