--- a/src/styles/tourdetailspage.scss
+++ b/src/styles/tourdetailspage.scss
@@ -1,6 +1,6 @@
 .container{
 	vertical-align: middle;
-	width: 900px !important;
+	width: 1000px !important;
 	overflow: auto;
 	min-height: 500px;
 	border:  1px solid;
@@ -39,18 +39,21 @@
 .vertical-col-right {
 	/*display: flex;*/
 	float: right;
+	align-items: center;
 	width: 50%;
 }
 
 .vertical-card {
 	display: block;
 	width: 100%;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 40px;
 }
 
 .last-row {
 	display: flex;
 }
+
 
 .actions-chat{
 	background-color: #0F52BA; 
@@ -60,11 +63,11 @@
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin-top: 100px;
+    margin-top: 80px;
 	margin-right: 30px;
 	border-radius: 5px;
 	cursor: pointer;
-	font-size: 15px;
+	font-size: 20px;
 	align-items: center;
 }
 
@@ -76,9 +79,11 @@
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-	margin: 30px;
+	margin-top: 30px;
+	margin-left: 50px;
 	border-radius: 5px;
 	cursor: pointer;
-	font-size: 15px;
+	font-size: 20px;
+	justify-self: center;
 	align-items: center;
 }
