--- a/src/styles/home-styles.scss
+++ b/src/styles/home-styles.scss
@@ -36,7 +36,7 @@
   padding-top: 2rem;
 }
 
-.userTypeContainer{
+.userTypeContainer {
   margin-top: 2rem;
   margin-bottom: 2rem;
   margin-left: 2rem;
@@ -52,11 +52,11 @@
 }
 
 .inactive {
-  background-color: #FF681E ;
+  background-color: #ff681e;
 }
 
 .active {
-  background-color: #006B3D;
+  background-color: #006b3d;
 }
 
 .userTypeButton2 {
