--- a/src/styles/loading-styles.module.css
+++ b/src/styles/loading-styles.module.css
@@ -1,7 +1,7 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #FFF;
+  border: 5px solid #fff;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
@@ -16,4 +16,4 @@
   100% {
     transform: rotate(360deg);
   }
-} 
+}
