--- a/src/styles/tourdetailspage.scss
+++ b/src/styles/tourdetailspage.scss
@@ -1,89 +1,87 @@
-.container{
-	vertical-align: middle;
-	width: 1000px !important;
-	overflow: auto;
-	min-height: 500px;
-	border:  1px solid;
-	padding: 30px;
-	border-radius: 5px;
-	display: grid;
-	background-color: white;
+.container {
+  vertical-align: middle;
+  width: 1000px !important;
+  overflow: auto;
+  min-height: 500px;
+  border: 1px solid;
+  padding: 30px;
+  border-radius: 5px;
+  display: grid;
+  background-color: white;
 }
 
 .title {
-	margin-top: 100px;
-	margin-left: 300px;
-	color: white;
-	margin-bottom: 30px;
+  margin-top: 100px;
+  margin-left: 300px;
+  color: white;
+  margin-bottom: 30px;
 }
-
 
 /* for the first two rows*/
 .line-row {
-	display: flex;
-	height: 100px;
+  display: flex;
+  height: 100px;
 }
 
 .block-card {
-	display: inline;
-	width: 50%;
+  display: inline;
+  width: 50%;
 }
 
 /* for the last row with vertical cards and buttons */
 
 .vertical-col {
-	/*display: flex;*/
-	width: 50%;
+  /*display: flex;*/
+  width: 50%;
 }
 
 .vertical-col-right {
-	/*display: flex;*/
-	float: right;
-	align-items: center;
-	width: 50%;
+  /*display: flex;*/
+  float: right;
+  align-items: center;
+  width: 50%;
 }
 
 .vertical-card {
-	display: block;
-	width: 100%;
-	margin-top: 20px;
-	margin-bottom: 40px;
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .last-row {
-	display: flex;
+  display: flex;
 }
 
-
-.actions-chat{
-	background-color: #0F52BA; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin-top: 80px;
-	margin-right: 30px;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 20px;
-	align-items: center;
+.actions-chat {
+  background-color: #0f52ba;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin-top: 80px;
+  margin-right: 30px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  align-items: center;
 }
 
-.actions-complete{
-	background-color: #4CAF50; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-	margin-top: 30px;
-	margin-left: 50px;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 20px;
-	justify-self: center;
-	align-items: center;
+.actions-complete {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin-top: 30px;
+  margin-left: 50px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  justify-self: center;
+  align-items: center;
 }
